--- a/action.yml
+++ b/action.yml
@@ -42,9 +42,14 @@ inputs:
     description: 'Command to build static website'
     required: false
     default: 'npm run build'
-  
+
   deploy_alias:
     description: 'Deployment Subdomain name'
+    required: false
+    default: ''
+
+  node_version:
+    description: 'Node version or arguments compatible with `nvm install`'
     required: false
     default: ''
 
@@ -60,6 +65,7 @@ runs:
     - ${{ inputs.install_command }}
     - ${{ inputs.build_command }}
     - ${{ inputs.deploy_alias }}
+    - ${{ inputs.node_version }}
 
 branding:
   icon: activity
