--- a/action.yml
+++ b/action.yml
@@ -53,6 +53,16 @@ inputs:
     required: false
     default: ''
 
+outputs:
+  NETLIFY_OUTPUT:
+    description: "netlify command output"
+  NETLIFY_PREVIEW_URL:
+    description: "deployment preview URL"
+  NETLIFY_LOGS_URL:
+    description: "deployment preview logs url"
+  NETLIFY_LIVE_URL:
+    description: "deployment URL"
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
