install netlify if not found

--- a/action.yml
+++ b/action.yml
@@ -67,6 +67,7 @@ outputs:
 runs:
   using: composite
   steps:
+      - run: which ${{ inputs.netlify_path }} &> /dev/null || npm install netlify-cli -g
       - run: ${{ github.action_path }}/entrypoint.sh
         shell: bash
         env:
