fix: pin netlify CLI
Workaround for #61 until a proper solution is determined

--- a/action.yml
+++ b/action.yml
@@ -67,7 +67,7 @@ outputs:
 runs:
   using: composite
   steps:
-      - run: which ${{ inputs.netlify_path }} &> /dev/null || npm install netlify-cli -g
+      - run: which ${{ inputs.netlify_path }} &> /dev/null || npm install netlify-cli@17.36.1 -g
         shell: bash
       - run: ${{ github.action_path }}/entrypoint.sh
         shell: bash
